--- a/css/content-contact.css
+++ b/css/content-contact.css
@@ -30,7 +30,13 @@
     width: 100%;
     height: 100%;
 }
-
+.options__contactItems{
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    flex: 1;
+    width: clamp(280px, 60vw, 1024px);
+}
 .contactTop__contactdetails {
     display: flex;
     flex-direction: column;
@@ -67,7 +73,7 @@
 .option__contactBottom {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
     flex: 1;
     gap: 40px;
 }
@@ -198,8 +204,8 @@ label {
 .contactdecor__three {
     position: absolute;
     z-index: 10;
-    top: 10%;
-    left: 24%;
+    top: 28%;
+    right: 24%;
     width: 18px;
     height: 18px;
     fill: rgb(131, 139, 194, 0.4);
@@ -258,10 +264,10 @@ label {
 .contactdecor__nine {
     position: absolute;
     z-index: 10;
-    bottom: 10%;
-    left: 40%;
-    width: 40px;
-    height: 40px;
+    top: 40%;
+    right: 40%;
+    width: 24px;
+    height: 24px;
     fill: rgb(165, 140, 179);
 }
 
@@ -278,30 +284,30 @@ label {
 .contactdecor__eleven {
     position: absolute;
     z-index: 10;
-    bottom: 28%;
+    top: 32%;
     right: 5%;
-    width: 30px;
-    height: 30px;
+    width: 80px;
+    height: 80px;
     fill: rgb(235, 231, 250, 0.8);
 }
 
 .contactdecor__twelve {
     position: absolute;
     z-index: 10;
-    top: 26%;
-    right: 25%;
-    width: 100px;
-    height: 100px;
+    top: 0;
+    right: 20%;
+    width: 200px;
+    height: 200px;
     fill: rgb(165, 140, 179, 0.8);
 }
 
 .contactdecor__thirteen {
     position: absolute;
-    z-index: 10;
-    top: 55%;
-    right: 10%;
-    width: 20px;
-    height: 20px;
+    z-index: -10;
+    bottom: 2%;
+    right: 12%;
+    width: 240px;
+    height: 240px;
     fill: rgba(217, 161, 160, 0.8);
 }
 
@@ -313,5 +319,10 @@ label {
         overflow: hidden;
         scroll-snap-align: start;
 
+    }
+
+    .option__contactBottom {
+        padding: 20px;
+        gap:0;
     }
 }
