--- a/css/content-hero.css
+++ b/css/content-hero.css
@@ -572,7 +572,6 @@
 @media screen and (min-width: 1024px) {
     .content__hero {
         height: calc(100vh - 60px);
-        overflow: hidden;
         scroll-snap-align: start;
     }
 
